about spacing fix

--- a/portfolio/files/css/styles.css
+++ b/portfolio/files/css/styles.css
@@ -273,7 +273,7 @@ a{
 	color: black;
 	position: absolute;
 	text-align: center;
-	top: 70px;
+	top: 50px;
 	left: 50px;
 	right: 0;
 	bottom: 0;
